--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Registerapp</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+<head>
+    <title>RegisterApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
-
-  <body>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
+    <header class="site-header">
+        <%= image_tag 'logo.png', alt: 'Logo', class: 'site-logo' %>
+        <h1>RegisterApp</h1>
+    </header>
     <%= yield %>
-  </body>
+</body>
 </html>
